--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <title></title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>React Application</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React App</title>
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
+
     <div id="app"></div>
 </body>
 
